@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2008-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2008-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMekLab.
  *
@@ -49,7 +49,6 @@ import javax.swing.JOptionPane;
 import javax.swing.JPanel;
 import javax.swing.SwingConstants;
 
-import megamek.codeUtilities.MathUtility;
 import megamek.common.CriticalSlot;
 import megamek.common.SimpleTechLevel;
 import megamek.common.TechConstants;
@@ -176,9 +175,9 @@ public class BMStructureTab extends ITab implements MekBuildListener, ArmorAlloc
 
         rightPanel.add(panArmor);
         rightPanel.add(Box.createVerticalStrut(11));
-        rightPanel.add(panArmorAllocation);
-        rightPanel.add(Box.createVerticalStrut(11));
         rightPanel.add(panPatchwork);
+        rightPanel.add(Box.createVerticalStrut(11));
+        rightPanel.add(panArmorAllocation);
         rightPanel.add(Box.createVerticalGlue());
 
         GridBagConstraints gbc = new GridBagConstraints();
@@ -649,6 +648,18 @@ public class BMStructureTab extends ITab implements MekBuildListener, ArmorAlloc
     }
 
     @Override
+    public void publishedChanged(String published) {
+        getMek().setPublished(published);
+        refresh.refreshSummary();
+        refresh.refreshPreview();
+    }
+
+    @Override
+    public void factionChanged(Faction faction) {
+        getEntity().setTechFaction(faction);
+    }
+
+    @Override
     public void mulIdChanged(int mulId) {
         getMek().setMulId(mulId);
         refresh.refreshSummary();
@@ -657,6 +668,14 @@ public class BMStructureTab extends ITab implements MekBuildListener, ArmorAlloc
     @Override
     public void techBaseChanged(boolean clan, boolean mixed) {
         if ((clan != getMek().isClan()) || (mixed != getMek().isMixedTech())) {
+            // When switching away from mixed tech, remove Clan CASE from non-Clan units
+            if (!mixed && !clan && getMek().hasClanCaseEquipped()) {
+                UnitUtil.removeAllMounted(getMek(), EquipmentType.get(EquipmentTypeLookup.CLAN_CASE));
+            }
+            // Clear Clan CASE opt-out when tech base no longer supports it
+            if (!clan && !mixed) {
+                getMek().clearClanCaseOptOut();
+            }
             getMek().setMixedTech(mixed);
             updateTechLevel();
         }
@@ -990,6 +1009,78 @@ public class BMStructureTab extends ITab implements MekBuildListener, ArmorAlloc
     }
 
     @Override
+    public void dniCockpitModChanged(boolean hasMod) {
+        if (hasMod && !getMek().hasDNICockpitMod()) {
+            MiscType dniMod = (MiscType) EquipmentType.get("DNICockpitModification");
+            if (dniMod != null) {
+                try {
+                    getMek().addEquipment(dniMod, Entity.LOC_NONE);
+                } catch (Exception ignored) {
+                    // 0-crit equipment shouldn't fail to add
+                }
+            }
+        } else if (!hasMod && getMek().hasDNICockpitMod()) {
+            for (MiscMounted mounted : getMek().getMisc()) {
+                if (mounted.getType().hasFlag(MiscType.F_DNI_COCKPIT_MOD)) {
+                    getMek().removeMisc(mounted.getType().getInternalName());
+                    break;
+                }
+            }
+        }
+        refresh.refreshBuild();
+        refresh.refreshStatus();
+        refresh.refreshPreview();
+    }
+
+    @Override
+    public void eiCockpitChanged(boolean hasEI) {
+        if (hasEI && !getMek().hasEiCockpit()) {
+            MiscType eiInterface = (MiscType) EquipmentType.get("EIInterface");
+            if (eiInterface != null) {
+                try {
+                    getMek().addEquipment(eiInterface, Entity.LOC_NONE);
+                } catch (Exception ignored) {
+                    // 0-crit equipment shouldn't fail to add
+                }
+            }
+        } else if (!hasEI && getMek().hasEiCockpit()) {
+            for (MiscMounted mounted : getMek().getMisc()) {
+                if (mounted.getType().hasFlag(MiscType.F_EI_INTERFACE)) {
+                    getMek().removeMisc(mounted.getType().getInternalName());
+                    break;
+                }
+            }
+        }
+        refresh.refreshBuild();
+        refresh.refreshStatus();
+        refresh.refreshPreview();
+    }
+
+    @Override
+    public void damageInterruptCircuitChanged(boolean hasDIC) {
+        if (hasDIC && !getMek().hasDamageInterruptCircuit()) {
+            MiscType dicMod = (MiscType) EquipmentType.get("DamageInterruptCircuit");
+            if (dicMod != null) {
+                try {
+                    getMek().addEquipment(dicMod, Entity.LOC_NONE);
+                } catch (Exception ignored) {
+                    // 0-crit equipment shouldn't fail to add
+                }
+            }
+        } else if (!hasDIC && getMek().hasDamageInterruptCircuit()) {
+            for (MiscMounted mounted : getMek().getMisc()) {
+                if (mounted.getType().hasFlag(MiscType.F_DAMAGE_INTERRUPT_CIRCUIT)) {
+                    getMek().removeMisc(mounted.getType().getInternalName());
+                    break;
+                }
+            }
+        }
+        refresh.refreshBuild();
+        refresh.refreshStatus();
+        refresh.refreshPreview();
+    }
+
+    @Override
     public void resetChassis() {
         UnitUtil.resetBaseChassis(getMek());
         refresh.refreshAll();
@@ -1080,6 +1171,7 @@ public class BMStructureTab extends ITab implements MekBuildListener, ArmorAlloc
         refresh.refreshSummary();
         refresh.refreshBuild();
         refresh.refreshPreview();
+        panHeat.setFromMek(getMek());
     }
 
     @Override
@@ -1134,7 +1226,7 @@ public class BMStructureTab extends ITab implements MekBuildListener, ArmorAlloc
         double remainingTonnage = TestEntity.floor(
               totalTonnage - currentTonnage, Ceil.HALF_TON);
 
-        double maxArmor = MathUtility.clamp(getMek().getArmorWeight() + remainingTonnage, 0,
+        double maxArmor = Math.clamp(getMek().getArmorWeight() + remainingTonnage, 0,
               UnitUtil.getMaximumArmorTonnage(getMek()));
         getMek().setArmorTonnage(maxArmor);
         panArmor.removeListener(this);
@@ -1183,7 +1275,7 @@ public class BMStructureTab extends ITab implements MekBuildListener, ArmorAlloc
                   .filter(m -> jumpJet.equals(m.getType()))
                   .collect(Collectors.toList());
             while (jjs.size() > jumpMP) {
-                UnitUtil.removeMounted(getMek(), jjs.remove(jjs.size() - 1));
+                UnitUtil.removeMounted(getMek(), jjs.removeLast());
             }
             while (jumpMP > jjs.size()) {
                 try {
@@ -1448,14 +1540,12 @@ public class BMStructureTab extends ITab implements MekBuildListener, ArmorAlloc
             crits = (crits + 1) / 2;
         }
         if (getMek().getEmptyCriticalSlots(location) < crits) {
-            JOptionPane.showMessageDialog(
-                  null, armor.getName()
-                        + " does not fit in location "
-                        + getMek().getLocationName(location)
-                        + ". Resetting to Standard Armor in this location.",
+            JOptionPane.showMessageDialog(this,
+                  "%s does not fit in location %s. Resetting to Standard Armor in this location."
+                        .formatted(armor.getName(), getMek().getLocationName(location)),
                   "Error",
                   JOptionPane.INFORMATION_MESSAGE);
-            UnitUtil.resetArmor(getMek(), location);
+            panPatchwork.setFromEntity(getMek());
         } else {
             getMek().setArmorType(armor.getArmorType(), location);
             getMek().setArmorTechLevel(armor.getTechLevel(getTechManager().getGameYear(), armor.isClan()), location);
