@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2024-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2024-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMekLab.
  *
@@ -38,7 +38,6 @@ import static megameklab.util.UnitUtil.changeMountStatus;
 import static megameklab.util.UnitUtil.getCritsUsed;
 import static megameklab.util.UnitUtil.isNonMekOrTankWeapon;
 import static megameklab.util.UnitUtil.isValidLocation;
-import static megameklab.util.UnitUtil.removeAllMounted;
 
 import java.util.ArrayList;
 import java.util.Comparator;
@@ -65,6 +64,7 @@ import megamek.common.units.BipedMek;
 import megamek.common.units.Entity;
 import megamek.common.units.LandAirMek;
 import megamek.common.units.Mek;
+import megamek.common.units.MekConstructionUtil;
 import megamek.common.units.QuadMek;
 import megamek.common.units.TripodMek;
 import megamek.common.weapons.c3.ISC3M;
@@ -421,7 +421,7 @@ public final class MekUtil {
             // remove it and pair them.
             // Unallocated singles in excess of engine capacity have already been removed.
             if (((toAdd & 1) == 1) && !allocatedSingle.isEmpty()) {
-                UnitUtil.removeMounted(mek, allocatedSingle.remove(0));
+                UnitUtil.removeMounted(mek, allocatedSingle.removeFirst());
                 mek.addEquipment(EquipmentType.get(EquipmentTypeLookup.COMPACT_HS_2), Entity.LOC_NONE);
                 toAdd--;
             }
@@ -678,14 +678,14 @@ public final class MekUtil {
             int crits = UnitUtil.getCritsUsed(mount);
             for (int i = 0; i < crits; i++) {
                 try {
-                    if (firstBlock || (locations.get(0) == Entity.LOC_NONE)) {
+                    if (firstBlock || (locations.getFirst() == Entity.LOC_NONE)) {
                         // create only one mount per equipment, for BV and stuff
-                        UnitUtil.addMounted(unit, mount, locations.get(0), false);
+                        UnitUtil.addMounted(unit, mount, locations.getFirst(), false);
                         if (firstBlock) {
                             firstBlock = false;
                         }
-                        if (locations.get(0) == Entity.LOC_NONE) {
-                            // only user-placable spread stuff gets location none
+                        if (locations.getFirst() == Entity.LOC_NONE) {
+                            // only user-placeable spread stuff gets location none
                             // for those, we need to create a mount for each crit,
                             // otherwise we can't correctly let the user place them
                             // luckily, that only affects TSM, so BV works out correctly
@@ -693,14 +693,14 @@ public final class MekUtil {
                         }
                     } else {
                         CriticalSlot cs = new CriticalSlot(mount);
-                        if (!unit.addCritical(locations.get(0), cs)) {
+                        if (!unit.addCritical(locations.getFirst(), cs)) {
                             UnitUtil.removeCriticalSlots(unit, mount);
                             JOptionPane.showMessageDialog(
                                   null,
                                   "No room for equipment",
                                   mount.getName()
                                         + " does not fit into "
-                                        + unit.getLocationName(locations.get(0)),
+                                        + unit.getLocationName(locations.getFirst()),
                                   JOptionPane.INFORMATION_MESSAGE);
 
                             if (mount instanceof MiscMounted) {
@@ -723,7 +723,7 @@ public final class MekUtil {
                     return null;
                 }
             }
-            locations.remove(0);
+            locations.removeFirst();
         }
         return mount;
     }
@@ -873,27 +873,6 @@ public final class MekUtil {
     }
 
     private MekUtil() {
-    }
-
-    /**
-     * Clears all links of the given equipment to other equipment and un-allocates it (assigns to LOC_NONE). Note: Does
-     * not clear the equipment's crit slots from its former location. For this, use
-     * {@link UnitUtil#removeCriticalSlots(Entity, Mounted)}
-     */
-    public static void clearMountedLocationAndLinked(Mounted<?> equipment) {
-        if ((Entity.LOC_NONE != equipment.getLocation()) && !equipment.isOneShot()) {
-            if (equipment.getLinked() != null) {
-                equipment.getLinked().setLinkedBy(null);
-                equipment.setLinked(null);
-            }
-            if (equipment.getLinkedBy() != null) {
-                equipment.getLinkedBy().setLinked(null);
-                equipment.setLinkedBy(null);
-            }
-        }
-        equipment.setLocation(Entity.LOC_NONE, false);
-        equipment.setSecondLocation(Entity.LOC_NONE, false);
-        equipment.setSplit(false);
     }
 
     /**
@@ -1263,17 +1242,14 @@ public final class MekUtil {
     }
 
     /**
-     * For the given Mek, adds Clan CASE in every location that has potentially explosive equipment (this includes PPC
-     * Capacitors) and removes it from all other locations. Calls {@link Mek#addClanCase()}. This method does not check
-     * if other CASE types are already present on a location.
+     * For the given Mek, removes all existing Clan CASE and then re-adds it to every location that has potentially
+     * explosive equipment (this includes PPC Capacitors). Skips locations that already have (IS) CASE or CASE II.
+     * Respects per-location opt-out.
      *
      * @param mek the mek to update
      */
     public static void updateClanCasePlacement(Mek mek) {
-        if (mek.isClan()) {
-            removeAllMounted(mek, EquipmentType.get(EquipmentTypeLookup.CLAN_CASE));
-            mek.addClanCase();
-        }
+        MekConstructionUtil.updateClanCasePlacement(mek);
     }
 
     /**
